# tlsn

./: Cargo.toml  tlsn_cargo.rs
.github/workflows/: azure-release.yml  ci.yml  rustdoc.yml
authdecode/: Cargo.toml
authdecode/.cargo/: config.toml
authdecode/benches/: halo2_proof_generation.rs  native_benchmark.rs
authdecode/browser-benchmark/: .gitignore  README.md  package-lock.json  package.json  serve.json  tsconfig.json
authdecode/browser-benchmark/public/: index.html
authdecode/browser-benchmark/scripts/: start.js
authdecode/browser-benchmark/src/: App.css  App.tsx  halo2-worker.ts
authdecode/src/: debug.rs  lib.rs  main.rs  prover.rs  verifier.rs  wasm.rs
authdecode/src/backend/: traits.rs
authdecode/src/backend/halo2/: circuit.rs  mod.rs  prover.rs  verifier.rs
authdecode/src/backend/halo2/range_check/: lookup_range_check.rs  mod.rs
authdecode/src/backend/mock/: mod.rs
authdecode/src/halo2_backend/: circuit.rs  mod.rs  onetimesetup.rs  prover.rs  utils.rs  verifier.rs
authdecode/src/halo2_backend/poseidon/: circuit_config.rs  mod.rs  rate2_params.rs  spec.rs
authdecode/src/prover/: commitment.rs
cd-scripts/tee/docker/amd-sev/coconut-svm/: Dockerfile
cd-scripts/tee/docker/amd-sev/ovmf/: Dockerfile
cd-scripts/tee/docker/amd-sev/qemu/: Dockerfile
cd-scripts/tee/docker/aws-nitro/: Dockerfile  run.sh
cd-scripts/tee/docker/base/: Dockerfile  container-entrypoint.sh
cd-scripts/tee/docker/intel-dcap/: Dockerfile  startup.sh
cd-scripts/tee/docker/intel-tdx/: Dockerfile
cd-scripts/tee/docker/notary-server/: Dockerfile
cd-scripts/tee/k8s/hypervisor/: Dockerfile
cd-scripts/tee/k8s/kata/: Dockerfile
components/aead/: Cargo.toml
components/aead/src/: error.rs  lib.rs
components/aead/src/aes_gcm/: mock.rs  mod.rs  tag.rs
components/aead/src/keystream/: cipher.rs  circuit.rs  mod.rs
components/cipher/: Cargo.toml
components/cipher/block-cipher/: Cargo.toml
components/cipher/block-cipher/src/: cipher.rs  circuit.rs  error.rs  lib.rs
components/cipher/new-stream-cipher/: Cargo.toml
components/cipher/new-stream-cipher/src/: lib.rs
components/cipher/new-stream-cipher/src/cipher/: mod.rs
components/cipher/new-stream-cipher/src/modes/: mod.rs  mpc.rs  zk.rs
components/cipher/stream-cipher/: Cargo.toml
components/cipher/stream-cipher/benches/: mock.rs
components/cipher/stream-cipher/src/: circuit.rs  error.rs  keystream.rs  lib.rs  mode.rs  stream_cipher.rs
components/integration-tests/: Cargo.toml
components/integration-tests/tests/: test.rs
components/key-exchange/: Cargo.toml
components/key-exchange/src/: error.rs  exchange.rs  lib.rs  mock.rs
components/prf/: Cargo.toml
components/prf/hmac-sha256/: Cargo.toml
components/prf/hmac-sha256/benches/: prf.rs
components/prf/hmac-sha256/src/: lib.rs  prf.rs
components/universal-hash/: Cargo.toml
components/universal-hash/src/ghash/ghash_inner/: ideal.rs  (+1 more)
crates/benches/browser/wasm/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: context.rs  encoding.rs  lib.rs
crates/components/cipher/: Cargo.toml
crates/components/cipher/src/: lib.rs
crates/components/hmac-sha256/: Cargo.toml
crates/components/hmac-sha256/src/: lib.rs  prf.rs
crates/components/key-exchange/: Cargo.toml
crates/components/key-exchange/src/: error.rs  exchange.rs  lib.rs  mock.rs  point_addition.rs
crates/components/poseidon/: .gitignore  Cargo.toml
crates/components/poseidon-halo2/: Cargo.toml
crates/components/poseidon-halo2/src/: lib.rs  rate15_params.rs  rate1_params.rs  rate2_params.rs  spec.rs
crates/components/poseidon/src/: lib.rs
crates/components/poseidon/src/primitives/: p128pow5t16.rs  p128pow5t2.rs  p128pow5t3.rs
crates/components/poseidon/tests/: index.js  tlsn-poseidon.circom
crates/components/universal-hash/: Cargo.toml
crates/components/universal-hash/src/: error.rs  lib.rs
crates/components/universal-hash/src/ghash/: mod.rs
crates/components/universal-hash/src/ghash/ghash_core/: core.rs  state.rs
crates/components/universal-hash/src/ghash/ghash_inner/: config.rs  mod.rs
crates/core/src/: transcript.rs
crates/core/src/fixtures/: provider.rs
crates/examples/attestation/: present.rs  prove.rs
crates/examples/discord/: discord_dm.rs
crates/mpc-tls/: Cargo.toml
crates/notary/server/: Cargo.toml
crates/notary/server/src/: config.rs  server_tracing.rs  service.rs  tee.rs
crates/prover/src/: error.rs  lib.rs  notarize.rs  state.rs
crates/prover/src/tls/: config.rs
crates/tls/backend/src/: lib.rs
crates/tls/core/src/: versions.rs
crates/tls/mpc/: Cargo.toml
crates/tls/mpc/src/: components.rs  config.rs  decode.rs  error.rs  lib.rs  transcript.rs
crates/tls/mpc/tests/: test.rs
crates/verifier/src/: error.rs  lib.rs  notarize.rs  state.rs  verify.rs
crates/verifier/src/tls/: config.rs
crates/wasm/: Cargo.toml
crates/wasm-test-runner/src/: chrome_driver.rs  tlsn_fixture.rs
crates/wasm/src/: lib.rs  ws_stream_wasm.rs
crates/wasm/src/prover/: mod.rs
crates/wasm/src/verifier/: mod.rs
notary-server/config/: config.yaml
tlsn/: Cargo.toml
tlsn/examples/: Cargo.toml
tlsn/examples/benchmark/: README.md  benchmark.rs
tlsn/examples/simple/: simple_prover.rs
tlsn/tests-integration/: Cargo.toml
tlsn/tlsn-core/: Cargo.toml
tlsn/tlsn-core/src/: lib.rs  merkle.rs  serialize.rs  transcript.rs
tlsn/tlsn-core/src/attestation/: builder.rs  mod.rs  proof.rs
tlsn/tlsn-core/src/commitment/: builder.rs
tlsn/tlsn-core/src/conn/: mod.rs
tlsn/tlsn-core/src/fixtures/: mod.rs
tlsn/tlsn-core/src/substring/: mod.rs
tlsn/tlsn-core/tests/: api.rs
tlsn/tlsn-fixtures/: Cargo.toml
tlsn/tlsn-fixtures/src/: lib.rs
tlsn/tlsn-fixtures/src/notarization/: mod.rs  notarized_session  session.rs
tlsn/tlsn-proto/: Cargo.toml  README.md
tlsn/tlsn-prover/src/: lib.rs
tlsn/tlsn-prover/src/tls/: mod.rs  notarize.rs
tlsn/tlsn-server-fixture/: Cargo.toml
tlsn/tlsn-server-fixture/src/: lib.rs  main.rs
tlsn/tlsn-server-fixture/src/data/: 16kb.json
tlsn/tlsn-verifier/src/tls/: mod.rs  notarize.rs
(+23 files in other folders)
