[package]
name = "authdecode"
version = "0.1.0"
edition = "2021"

[lib]
name = "authdecode"

[[bin]]
name = "debug"
path = "./src/debug.rs"

[dependencies]
thiserror.workspace = true
num.workspace = true
rand.workspace = true
aes.workspace = true
cipher.workspace = true
rand_chacha.workspace = true
sha2 = { workspace = true, features = ["compress"] }

# dependencies for halo2 
halo2_proofs = { git = "https://github.com/zcash/halo2", version = "0.3", features = ["dev-graph"]}
halo2_gadgets = { git = "https://github.com/zcash/halo2", version = "0.3"}
pasta_curves = "0.5"
group = "0.13"
ff = "0.13"
plotters = { version = "0.3.5" }
structopt = "0.3.26"

[dev-dependencies]
hex.workspace = true
num-bigint = { workspace = true, features = ["rand"] }
criterion.workspace = true

[[bench]]
name = "halo2_proof_generation"
harness = false
