[workspace]
members = ["stream-cipher", "block-cipher"]
resolver = "2"

[patch.'https://github.com/privacy-scaling-explorations/mpz']
mpz-circuits = { path = "../../../mpz/crates/mpz-circuits" }
mpz-garble = { path = "../../../mpz/crates/mpz-garble" }

[patch.'https://github.com//tlsnotary/tlsn-utils']
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "1d27bd7" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "1d27bd7" }

[workspace.dependencies]
# tlsn
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }

# crypto
aes = "0.8"
ctr = "0.9.2"
cipher = "0.4.3"

# async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false }

# testing
rstest = "0.17"
criterion = "0.5"

# error/log
thiserror = "1"
tracing = "0.1"

# misc
derive_builder = "0.12"
