[package]
name = "tlsn-key-exchange"
authors = ["TLSNotary Team"]
description = "Implementation of the 3-party key-exchange protocol"
keywords = ["tls", "mpc", "2pc", "pms", "key-exchange"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.5"
edition = "2021"

[lib]
name = "key_exchange"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-fields = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d" }

p256 = { version = "0.13", features = ["ecdh", "serde"] }
async-trait = "0.1"
thiserror = "1"
serde = "1"
futures = "0.3"
serio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6e0be94" }
derive_builder = "0.12"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b28f69d", features = [
    "ideal",
] }

rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
