[workspace]
members = ["hmac-sha256-circuits", "hmac-sha256"]
resolver = "2"

[patch.'https://github.com/privacy-scaling-explorations/mpz']
mpz-circuits = { path = "../../../mpz/crates/mpz-circuits" }
mpz-garble = { path = "../../../mpz/crates/mpz-garble" }

[patch.'https://github.com//tlsnotary/tlsn-utils']
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "1d27bd7" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "1d27bd7" }

[workspace.dependencies]
# tlsn
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }

# async
async-trait = "0.1"
futures = "0.3"
tokio = "1"

# error/log
thiserror = "1"
tracing = "0.1"

# testing
criterion = "0.5"
