[package]
name = "tlsn-fixtures"
version = "0.0.0"
edition = "2021"

[dependencies]
tlsn-core.workspace = true
tlsn-tls-core.workspace = true
mpz-core.workspace = true
mpz-garble-core.workspace = true
mpz-circuits.workspace = true

p256.workspace = true

hex.workspace = true
rstest.workspace = true
webpki-roots.workspace = true
bincode.workspace = true
