[package]
name = "tlsn-key-exchange"
authors = ["TLSNotary Team"]
description = "Implementation of the 3-party key-exchange protocol"
keywords = ["tls", "mpc", "2pc", "pms", "key-exchange"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.8-pre"
edition = "2021"

[lib]
name = "key_exchange"

[features]
default = ["mock"]
mock = []

[dependencies]
mpz-vm-core = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }
mpz-memory-core = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }
mpz-fields = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }
mpz-share-conversion = { git ="https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm" , features = ["test-utils"] }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm"  }

p256 = { workspace = true, features = ["ecdh", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "43995c5" }
derive_builder = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mpz-ot = {  git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm" , features = ["ideal"] }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", branch = "feat/garble-vm" }

rand_chacha = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
