[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
ff = { version = "0.13", features = ["bits"] }


halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }

halo2_gadgets = { git = "https://github.com/scroll-tech/halo2/"}


lazy_static = "1.4"
rand_chacha = "0.3.0"

once_cell = "1.19"

[toolchain]
channel = "nightly"


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
