[package]
name = "tlsn-universal-hash"
authors = ["TLSNotary Team"]
description = "A crate which implements different hash functions for two-party computation"
keywords = ["tls", "mpc", "2pc", "hash"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.8-pre"
edition = "2021"

[features]
default = ["ghash", "ideal"]
ghash = []
ideal = ["dep:ghash_rc"]

[dependencies]
# tlsn
mpz-core = { workspace = true }
mpz-common = { workspace = true, features = ["ideal"] }
mpz-fields = { workspace = true }
mpz-share-conversion = { workspace = true }

ghash_rc = { package = "ghash", version = "0.5", optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
opaque-debug = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
mpz-common = { workspace = true, features = ["test-utils"] }
mpz-share-conversion = { workspace = true, features = ["ideal"] }

ghash_rc = { package = "ghash", version = "0.5" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
rand_chacha = { workspace = true }
rand = { workspace = true }
generic-array = { workspace = true }
